# gasto-publico-mx

./: .gitignore  README.md  hallazgos_completos.md  img_tweet2_contratacion.html  img_tweet3_farmaceuticas.html  img_tweet4_concentracion.html  img_tweet5_anomalias.html  infografia.html  package.json  post_reddit.md  pyproject.toml  screenshot.js  shot.js  thread_x.md
schema/: 001_initial.sql
src/: analisis_estados.py  anomalias.py  cli.py  linkeo.py
src/crawlers/: cdmx.py  compranet.py  datos_gob.py  transparencia.py
src/db/: connection.py
src/loaders/: __init__.py  cdmx_loader.py  compranet_loader.py  pef_loader.py
